Modif modiffication de fin de journée (mise à jour de l'objet carrousel et test d'ajout)

--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,25 @@ option {
 }
 
 section {
-    width: 1250%;
+    width: 1250px;
     margin: 0 auto;
+}
+
+#partOne {
+    height: 500px;
+    margin-top: 2%;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+#carrouselLeft, #carrouselUp {
+    height: 100%;
+}
+
+#carrouselLeft {
+    width: 70%;
+}
+
+#carrouselUp {
+    width: 25%;
 }
