--- a/css/style.css
+++ b/css/style.css
@@ -214,4 +214,63 @@ section {
 
 #carrouselUp {
     width: 25%;
+    margin-left: 2%;
+    position: relative;
 }
+
+#carrouselUp span {
+    color: #ffb700;
+    font-weight: bold;
+    margin-bottom: 2%;
+}
+
+footer {
+    width: 100%;
+}
+
+#logoNetworks {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-top: 3%;
+}
+
+#logoNetworks div {
+    width: 4%;
+    height: 100%;
+    display: flex;
+    position: relative;
+}
+
+#logoNetworks div i {
+    color: white;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+#lineLienOne, #lineLienTwo {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+#lineLienOne div, #lineLienTwo div, #years, #amazon {
+    width: auto;
+    height: 100%;
+    margin-right: 2%;
+    color: white;
+    font-size: 1.8rem;
+    text-align: center;
+}
+
+#years {
+    font-size: 1.5rem;
+    margin-bottom: 2%;
+    margin-top: 2%;
+}
+
